--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,113 @@
 * {
-   margin: 0;
-   padding: 0;
-  
+	margin: 0;
+	padding: 0;
+	font-family:Times New Roman;
 }
 
-body, main {
-	background:white; font-size:20pt; color:dark-gray; font-family:Verdana
-}
-
-header, footer {
+body{
 	background:white;
+	font-size:20pt;
+	color:dark-gray;
+
 }
 
+header {
+	background:black;
+	color: white;
+	font-size:50px;
+	height: 250px;
+}
+
+header div {
+	border-bottom: 10px solid white;
+}
+	
+nav a, nav a:visited{
+	border-left:1px solid white;
+	padding-left: 5px;
+	color:white;
+	font-size:30px;
+	text-decoration: none;
+}
+
+main {
+	margin: 5% 15% 0 15%; 
+	align-items: center;
+
+}
+
+footer, nav {
+	height: 80px;
+	background:black;
+	color: white;
+	align-items: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+}
 
 table {
+	table-layout: auto;
 	width: 100%;
-	border: 3px solid;
+	border-collapse: collapse;
+}
+
+td {
+	border: 3px solid white;
 }
 
 th,td {
-	border: 3px solid;
+	padding-left: 5px;
+}
+
+tr:nth-child(odd) {
+	background: #a8cbe83b;
+}
+
+tr:nth-child(even) {
+	background:#5dabe8;
+	color: white;
 }
 
 
-input, select {
- font-size:30px;
+select, input{
+	font-size:30px;
 }
 
 textarea {
-width: 100%;
-height:200px;
+	width: 100%;
+	height:200px;
+}
 
+ul {
+	height:60%
+}
+
+li {
+	list-style-type: none;
+}
+
+li:first-child {
+	margin-left: 10%;
+}
+
+footer div{
+	padding-left: 5px;
 }
 
 .logo {
-	width: 70px;
+	width: 150px;
+	background:#e8dfdf;
 }
 
 .photo {
 	width: 200px;
 }
 
-.icon
-{
+.icon {
 	width: 50px;
-}
-
-.no_marker
-{
-	list-style-type: none;
 }
 
 .wide {
@@ -59,11 +118,15 @@ height:200px;
 	background:#2b6f8e6b;
 }
 
- .row {  
+.row {  
     display: flex; 
     width: 100%;
     flex-direction: row;
-	
+	justify-content:space-between;
+}
+
+.lightblue {
+	background:#a8cbe83b;
 }
 
 .orange {
@@ -78,11 +141,9 @@ height:200px;
 	background:#dc9ae9;
 }
 
-
 .half {
 	width:50%;
 }
-
 
 .margin_bot {
 	margin-bottom: 30px;
@@ -93,6 +154,33 @@ height:200px;
 }
 
 .padding {
-padding-left: 30px;
-padding-right: 30px;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+.center {
+	margin: auto;
+}
+
+.row_70 {  
+    display: flex; 
+    width: 70%;
+    flex-direction: row;
+	justify-content:space-between;
+}
+.center_p{
+	text-align:center;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.td1 {
+	width: 15%;
+	text-align: center;
+}
+
+.input{
+	width:40%;
 }
