--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header {
 	background:black;
 	color: white;
 	font-size:50px;
-	height: 250px;
+	height: 240px;
 }
 
 header div {
@@ -31,22 +31,35 @@ nav a, nav a:visited{
 }
 
 main {
-	margin: 5% 15% 0 15%; 
+	margin: 2% 15%; 
 	align-items: center;
 
 }
 
 footer, nav {
-	height: 80px;
+	height: 70px;
 	background:black;
 	color: white;
 	align-items: center;
 }
 
+
+/*размещение футера*/
 footer {
-    position: absolute;
-    bottom: 0;
+    /*position: absolute;
+    bottom: 0;	/*с увеличением масштаба смещается*/
+	
+	/* flex: 0 0 auto;	с уменьшением масштаба подпрыгивает*/
+
+
 }
+
+.content {
+	min-height: calc(100vh - 70px);
+}
+
+/*размещение футера*/
+
 
 table {
 	table-layout: auto;
